--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,325 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --primary: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 4rem 4rem;
+}
+
+/* Today */
+
+.result {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.today {
+  background: var(--primary);
+  border-radius: 5px;
+  margin: 1rem 0;
+  margin-bottom: 2rem;
+  padding: 2rem 3rem;
+  color: white;
+  border: 5px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.today:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.title {
+  font-size: 1.9em;
+  font-weight: 600;
+  letter-spacing: 2px;
+  padding-bottom: 0.5rem;
+}
+
+.local-time {
+  font-size: 0.9em;
+}
+
+.city {
+  padding-top: 0.5rem;
+  font-size: 1.4em;
+}
+
+/* Current */
+.current {
+  display: flex;
+  align-items: flex-end;
+  padding-top: 1rem;
+  justify-content: flex-start;
+  gap: 60px;
+}
+
+.current img {
+  width: 100px;
+}
+
+.current-temp {
+  font-size: 4em;
+  font-weight: 700;
+  padding: 0;
+  color: white;
+}
+
+.search {
+  margin: 2rem 0;
+}
+
+.text-form {
+  margin-bottom: 2rem;
+}
+
+.input-div {
+  position: relative;
+  width: 70%;
+  display: flex;
+}
+
+.text-form input {
+  height: 2rem;
+  padding-left: 30px;
+  margin-right: 0.5rem;
+  background: transparent;
+  border: 1px solid #555;
+  outline: none;
+  color: #222;
+}
+
+.text-form input:focus {
+  outline: none;
+  border: 1px solid #555;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  color: #555;
+  font-size: 0.9rem;
+}
+
+.search-btn {
+  height: 2rem;
+  background-image: var(--primary);
+  border: none;
+  padding: 0.4rem 0.8rem;
+  color: white;
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  border: 1px solid white;
+  transition: 0.3s ease;
+}
+
+.search-btn:active {
+  color: #6a85b6;
+  background: white;
+  border: 1px solid #6a85b6;
+}
+
+/* Loading */
+
+.loading {
+  width: 5rem;
+  height: 5rem;
+  border: 5px solid black;
+  border-radius: 50%;
+  border-top-color: gray;
+  animation: spinner 0.8s linear infinite;
+  /* margin: 3rem auto; */
+  display: inline-block;
+}
+
+.loading-container {
+  text-align: center;
+  padding-top: 3rem;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.forecast {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.forecast-card {
+  padding: 1rem;
+  background: var(--primary);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  color: white;
+  min-width: 220px;
+  transition: 0.3s ease;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.forecast-card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.day {
+  font-size: 1.5em;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+.month {
+  font-size: 0.8em;
+}
+
+.condition {
+  padding: 0.5rem 0;
+  text-align: center;
+}
+
+.temps-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  /* align-items: center; */
+  padding-top: 0.6rem;
+}
+.temps {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.temps span,
+.hyphen {
+  font-size: 1.8em;
+  font-weight: 500;
+}
+
+.temps p {
+  font-size: 0.8em;
+}
+
+.hour-cards {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 4rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.hour-card {
+  flex: 1;
+  background: var(--primary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  max-width: 200px;
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  color: white;
+  letter-spacing: 1px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.hour-card:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+/* Card Colors */
+
+.rain {
+  background-image: linear-gradient(
+    to top,
+    #3ab5b0 0%,
+    #3d99be 31%,
+    #56317a 100%
+  );
+}
+
+.clear {
+  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+}
+.sunny {
+  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+}
+
+.cloudy {
+  background-image: linear-gradient(180deg, #93a5cf 0%, #e4efe9 100%);
+}
+
+.snow {
+  background-image: linear-gradient(
+    to bottom,
+    #adb9bb,
+    #b6c6c4,
+    #c2d2cb,
+    #d1ded1,
+    #e3e9d7
+  );
+}
+
+.thunder {
+  background-image: linear-gradient(
+    to right,
+    #eea2a2 0%,
+    #bbc1bf 19%,
+    #57c6e1 42%,
+    #b49fda 79%,
+    #7ac5d8 100%
+  );
+}
+
+@media only screen and (max-width: 480px) {
+  .current {
+    flex-direction: column;
+  }
+  .content {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+  .today {
+    width: 100%;
+    margin-top: 0;
+  }
+  .search {
+    margin: 1rem 0;
+  }
+  .text-form {
+    margin: 0;
+  }
+  .hour-cards {
+    gap: 10px;
+    margin-bottom: 2rem;
+  }
 }
