mobile changes css

--- a/src/index.css
+++ b/src/index.css
@@ -300,6 +300,7 @@ body {
   );
 }
 
+
 @media only screen and (max-width: 480px) {
   .current {
     flex-direction: column;
@@ -321,5 +322,15 @@ body {
   .hour-cards {
     gap: 10px;
     margin-bottom: 2rem;
+    display: inline-flex;
+  }
+  .result {
+    margin: 0.5rem;
+  }
+  .info {
+    text-align: center;
+  }
+  table {
+    padding: 0.5rem;
   }
 }
