--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ body {
 }
 
 .search {
-  margin: 2rem 0;
+  margin-top: 1rem;
 }
 
 .text-form {
@@ -237,7 +237,7 @@ body {
 }
 
 .hour-card {
-  flex: 1;
+  flex: 1 0 50%;
   background: var(--primary);
   display: flex;
   justify-content: space-between;
@@ -275,7 +275,7 @@ body {
 }
 
 .cloudy {
-  background-image: linear-gradient(180deg, #93a5cf 0%, #e4efe9 100%);
+  background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
 }
 
 .snow {
@@ -302,7 +302,9 @@ body {
 
 @media only screen and (max-width: 480px) {
   .current {
-    flex-direction: column;
+    align-items: flex-end;
+    flex-direction: row;
+    justify-content: space-between;
   }
   .content {
     margin-left: 0.5rem;
@@ -311,6 +313,7 @@ body {
   .today {
     width: 100%;
     margin-top: 0;
+    padding: 1rem;
   }
   .search {
     margin: 1rem 0;
@@ -321,7 +324,8 @@ body {
   .hour-cards {
     gap: 10px;
     margin-bottom: 2rem;
-    display: inline-flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
   .result {
     margin: 0.5rem;
@@ -331,5 +335,8 @@ body {
   }
   table {
     padding: 0.5rem;
+  }
+  .forecast {
+    display: grid;
   }
 }
