--- a/src/index.css
+++ b/src/index.css
@@ -275,7 +275,7 @@ body {
 }
 
 .cloudy {
-  background-image: linear-gradient(180deg, #93a5cf 0%, #e4efe9 100%);
+  background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
 }
 
 .snow {
